@startuml RVC_class
!theme plain
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam classIconSize 0
skinparam linetype polyline
skinparam nodesep 40
skinparam ranksep 45

title Roomba RVC — Class diagram\n(SRS/SD v0.7.2: travelToggle, back sensor, dust maneuver)

package "Roomba RVC control software" #E8F4FF {

  class RvcSoftwareController {
    + initialize() : void
  }

  class AutomaticCleaningSession {
    - sessionActive : Boolean
    - sessionSource : SessionSource
    --
    + StartSession(source : SessionSource) : void
    + StopSession() : void
    + ResumeSession(source : SessionSource) : void
    + requestServiceOrReset() : void
    - notifySessionStateChanged() : void
  }

  class ObstaclePerceptionContext {
    - frontObstacle : Boolean
    - leftObstacle : Boolean
    - backObstacle : Boolean
    - rightObstacleInferred : Boolean
    - rightProbeStatus : ProbeStatus
    - lastUpdateTime : TimeStamp
    --
    + ObstacleStateChanged(event : ObstacleEvent) : FusedObstacleSnapshot
    + RequestRightSideProbe(reason : ProbeReason) : void
    + DustManeuverRequested() : void
    + DustManeuverComplete() : void
  }

  class NavigationAndEscapeCoordinator {
    - motionState : MotionState
    - travelToggle : TravelToggle
    - backupDistanceRemaining : Distance
    --
    + SessionStateChanged(active : Boolean, travelToggle : TravelToggle) : void
    + FusedObstacleSnapshot(snapshot : FusedObstacleSnapshot) : void
    + DustManeuverRequested() : void
    + DustManeuverComplete() : void
    + RequestRightSideProbe(reason : ProbeReason) : void
    + ToggleTravelDirection() : void
  }

  class SurfaceCleaningController {
    - cleaningMode : CleaningMode
    - powerLevel : PowerLevel
    - dustSignal : DustSignal
    --
    + SessionStateChanged(active : Boolean, cleaningMode : CleaningMode) : void
    + DustSignalUpdated(signal : DustSignal) : void
    + SuspendCleaningForManeuver() : void
    + ResumeCleaningAfterManeuver(mode : CleaningMode) : void
    + StartBoostCleaning() : void
    + EndBoostCleaning() : void
    + SetCleaningMode(mode : CleaningMode) : void
  }

  class FusedObstacleSnapshot <<value>> {
    + kind : FusedObstacleSnapshotKind
    + leadingSectorBlocked : Boolean
    + leadingSectorSafe : Boolean
    + surrounded : Boolean
    + lateralOpening : Boolean
    + rightTurnViable : Boolean
    + leftTurnViable : Boolean
    + valid : Boolean
  }

  class ObstacleEvent <<value>> {
    + kind : ObstacleEventKind
    + probePose : ProbePose
    + probeSensor : ProbeSensor
    + sampleTime : TimeStamp
  }

  enum SessionSource {
    User
    Scheduler
    Remote
    TBD
  }

  enum TravelToggle {
    Forward
    Backward
    TBD
  }

  enum MotionState {
    ForwardCruise
    BackwardCruise
    Avoiding
    RightSideProbing
    SurroundedReversing
    DustManeuvering
    Turning
    Stopped
    TBD
  }

  enum CleaningMode {
    Normal
    Boost
    Suspended
    TBD
  }

  enum PowerLevel {
    Normal
    Boost
    Off
    TBD
  }

  enum MotionCommand {
    forward
    reverse
    forwardOrReversePerToggle
    turnRight
    turnLeft
    reverseEscapeSegment
    probeRightSide
    restoreHeading
    spin540Clockwise
    spin540CounterClockwise
    stop
    holdOrReManeuverTBD
    stopOrSafeHold
    stopOrFallbackTBD
    fallbackOrEscalateTBD
    suppressMotionTBD
    TBD
  }

  enum CleaningCommand {
    normal
    boost
    suspend
    TBD
  }

  enum ObstacleEventKind {
    frontSample
    leftSample
    backSample
    probePoseRightSample
    leadingSectorBlocked
    leadingSectorSafe
    dustDetected
    dustCleared
    surrounded
    leftOpening
    lateralOpening
    noLateralOpening
    invalidOrTimeout
    invalidOrStale
    partialStale
    recovered
    ambiguous
    TBD
  }

  enum FusedObstacleSnapshotKind {
    leadingSectorSafe
    leadingSectorBlocked
    notSurrounded
    surrounded
    invalid
    stale
    probeStale
    persistentInvalid
    valid
    ambiguous
    partialStale
    rightTurnViable
    rightTurnInvalid
    leftTurnViable
    noLateralTurnViable
    noLateralOpening
    unstable
    incoherent
    TBD
  }

  class TimeStamp <<type>>
  class Distance <<type>>
  enum ProbeStatus {
    Pending
    Valid
    Invalid
    Stale
    Timeout
    TBD
  }
  enum ProbeReason {
    classifyObstacle
    rightTurnViability
    surroundedCheck
    lateralOpeningCheck
    rightStatusNeeded
    alignRightProbe
    TBD
  }
  enum ProbePose {
    none
    right
    TBD
  }
  enum ProbeSensor {
    front
    back
    TBD
  }
  enum DustSignal {
    aboveThreshold
    invalid
    normal
    TBD
  }
}

package "External interfaces" #F5F5F5 {
  interface SessionIntentPort {
    StartSession(source)
    StopSession()
    ResumeSession(source)
    requestServiceOrReset()
  }

  interface ObstacleInputPort {
    ObstacleStateChanged(event)
  }

  interface DustInputPort {
    DustSignalUpdated(signal)
  }

  interface MotionCommandSink {
    MotionCommand(command, probeSensor)
  }

  interface CleaningCommandSink {
    CleaningCommand(command)
  }
}

RvcSoftwareController "1" *-- "1" AutomaticCleaningSession : owns
RvcSoftwareController "1" *-- "1" ObstaclePerceptionContext : owns
RvcSoftwareController "1" *-- "1" NavigationAndEscapeCoordinator : owns
RvcSoftwareController "1" *-- "1" SurfaceCleaningController : owns

AutomaticCleaningSession ..|> SessionIntentPort
ObstaclePerceptionContext ..|> ObstacleInputPort
SurfaceCleaningController ..|> DustInputPort

AutomaticCleaningSession "1" --> "1" NavigationAndEscapeCoordinator : notifies session state\n(initial travelToggle=Forward)
AutomaticCleaningSession "1" --> "1" SurfaceCleaningController : notifies session state\n(initial cleaningMode=Normal)

ObstaclePerceptionContext "1" --> "1" NavigationAndEscapeCoordinator : FusedObstacleSnapshot /\nRequestRightSideProbe /\nDustManeuverRequested /\nDustManeuverComplete
ObstaclePerceptionContext ..> FusedObstacleSnapshot : creates
ObstaclePerceptionContext ..> ObstacleEvent : consumes
FusedObstacleSnapshot ..> FusedObstacleSnapshotKind : type

NavigationAndEscapeCoordinator "1" --> "1" SurfaceCleaningController : suspend / resume /\nStartBoostCleaning / EndBoostCleaning /\nSetCleaningMode
NavigationAndEscapeCoordinator "1" --> "1" MotionCommandSink : sends command
SurfaceCleaningController "1" --> "1" CleaningCommandSink : sends command

AutomaticCleaningSession ..> SessionSource : type
NavigationAndEscapeCoordinator ..> MotionState : type
NavigationAndEscapeCoordinator ..> TravelToggle : type
SurfaceCleaningController ..> CleaningMode : type
SurfaceCleaningController ..> PowerLevel : type
SurfaceCleaningController ..> DustSignal : type
NavigationAndEscapeCoordinator ..> Distance : type
NavigationAndEscapeCoordinator ..> ProbeReason : type
ObstaclePerceptionContext ..> TimeStamp : type
ObstaclePerceptionContext ..> ProbeStatus : type
ObstacleEvent ..> ProbePose : type
ObstacleEvent ..> ProbeSensor : type
ObstacleEvent ..> ObstacleEventKind : type

note bottom of NavigationAndEscapeCoordinator
  **travelToggle** swaps leading travel edge:
  Forward = front leads; Backward = back leads.
  Toggled on dust-maneuver completion only
  (**ToggleTravelDirection**). Unchanged by
  surrounded escape.
end note

note bottom of ObstaclePerceptionContext
  **backObstacle** is leading sector when
  travelToggle=Backward (normal cruise), probe
  sensor when toggled Backward, ignored during
  dust maneuver; not leading during surrounded-
  escape reverse.
end note

legend bottom left
  *--  composition: controller owns internal objects
  ..|> realization: class provides an input port
  -->  association: object keeps/calls collaborator or sink
  ..>  dependency: temporary value/message type use
  --|> inheritance: not used; no superclass is defined by SRS/SDs
  o--  aggregation: not used; no shared ownership is defined
endlegend

@enduml
